# synkevo

./: .gitignore  CMakeLists.txt  README.txt
app/: CMakeLists.txt
app/src/: main.cpp  synkevo.kcfg
app/src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  synkevoui.rc
app/src/gui/config/: generalconfig.cpp  generalconfig.h  generalconfig.ui
app/src/gui/widgets/: backenderrorwidget.cpp  backenderrorwidget.h  backenderrorwidget.ui  configwidget.cpp  configwidget.h  configwidget.ui  profilelistwidget.cpp  profilelistwidget.h  profilelistwidget.ui  profilewidget.cpp  profilewidget.h  profilewidget.ui  stateoverlay.cpp  stateoverlay.h  stateoverlay.ui  syncwidget.cpp  syncwidget.h  syncwidget.ui
cmake/modules/: FindSyncEvolution.cmake
gui/: CMakeLists.txt
gui/src/: main.cpp  preferences.kcfgc  synkevo.kcfg
gui/src/gui/: synkevo.desktop
share/dbus-interfaces/: org.syncevolution.Connection.xml  org.syncevolution.Server.xml  org.syncevolution.Session.xml
